kubernetes/apps/app-cluster/productivity/mkdocs/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mkdocs
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: docs.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Project Documentation"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "https://docs.krapulax.dev"
    gethomepage.dev/icon: "mkdocs.png"
    gethomepage.dev/name: "MkDocs"
    gethomepage.dev/weight: "40"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - docs.krapulax.dev
  rules:
    - backendRefs:
        - name: mkdocs
          namespace: productivity
          port: 8000
